# cache-redis

./: .gitmodules  CMakeLists.txt  README.md  cache.config  cvmfs_cache_null.cc
cmake/: FindCVMFS_CACHE.cmake
config/: cache-redis.conf  cms.cern.ch.conf
src/: CMakeLists.txt  main.cc  redis_plugin.cc  redis_plugin.h  util.cc  util.h
test/: CMakeLists.txt
